# cam_imu_sync

./: CMakeLists.txt  README.md  package.xml
include/cam_imu_sync/: Bluefox2ImuSynchronizer.h  CamImuSynchronizer.h  Chameleon3ImuSynchronizer.h
launch/: cam_imu_sync.launch  chameleon3_imu_sync.launch  stereo_imu_sync.launch  verify_sync.launch
src/: Bluefox2ImuSynchronizer.cpp  CamImuSynchronizer.cpp  Chameleon3ImuSynchronizer.cpp  cam_imu_sync_node.cpp  image_rotater.cpp  stereo_imu_sync_node.cpp  sync_verification.cpp
sync_driver/: CMakeLists.txt  package.xml
sync_driver/include/sync_driver/: Bluefox2ImuSynchronizer.h  CamImuSynchronizer.h  Chameleon3ImuSynchronizer.h  timer.hpp
sync_driver/launch/: bluefox2_imu_sync.launch  cam_imu_sync.launch  chameleon3_imu_sync.launch  image_rotater.launch
sync_driver/src/: Bluefox2ImuSynchronizer.cpp  CamImuSynchronizer.cpp  Chameleon3ImuSynchronizer.cpp  sync_driver_node.cpp
sync_verification/: CMakeLists.txt  package.xml
sync_verification/include/sync_verification/: SyncVerifier.h
sync_verification/launch/: sync_verify.launch
sync_verification/src/: SyncVerifier.cpp  sync_verify_node.cpp
