<?xml version="1.0"?>
<package>
  <name>camera_imu_sync</name>
  <version>0.0.1</version>
  <description>Sync the cameras and IMU</description>
  <maintainer email="sunke.polyu@gmail.com">ke</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/camera_imu_sync</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_base</build_depend>
  <build_depend>bluefox2</build_depend>
  <build_depend>imu_3dm_gx4</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>bluefox2</run_depend>
  <run_depend>imu_3dm_gx4</run_depend>
  <run_depend>roscpp</run_depend>

</package>
