<?xml version="1.0"?>
<package format="2">
  <name>sync_driver</name>
  <version>0.0.1</version>
  <description>Sync the cameras and IMU</description>
  <maintainer email="sunke.polyu@gmail.com">ke</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/camera_imu_sync</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_base</depend>
  <depend>bluefox2</depend>
  <depend>imu_vn_100</depend>
  <depend>roscpp</depend>

</package>
