<?xml version="1.0"?>
<package format="2">
  <name>sync_verification</name>
  <version>0.0.1</version>
  <description>Verify the synchronization between camera and IMU</description>
  <maintainer email="sunke.polyu@gmail.com">ke</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/camera_imu_sync</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>feature_detector</depend>
  <depend>feature_tracker</depend>
  <depend>vision_utils</depend>

</package>
